--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,26 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# vs code
+.vscode
 
 # dependencies
-/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
 # production
-/build
+build
 
 # misc
 .DS_Store
-.env.local
+
+# dotenv environment variable files
+.env
 .env.development.local
 .env.test.local
 .env.production.local
+.env.local
 
 npm-debug.log*
 yarn-debug.log*
