--- a/server/package.json
+++ b/server/package.json
@@ -14,7 +14,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-jwt": "^6.1.1",
     "helmet": "^5.0.2",
+    "jwks-rsa": "^2.0.5",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
